fixed background height issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,8 @@
 }
 
 #root {
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   background-image: linear-gradient(
     to bottom right,
     var(--bg-colour-1),
